<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_edit"
        android:icon="@drawable/ic_edit_white"
        android:title="@string/edit_product"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_delete"
        android:icon="@drawable/ic_delete_white"
        android:title="@string/delete_product"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_unfavorite"
        android:icon="@drawable/ic_unfavorite"
        android:title="@string/menu_unfavorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/menu_favorite"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_cart"
        android:enabled="true"
        android:title="@string/menu_cart"
        app:actionLayout="@layout/menu_badge_detail"
        app:showAsAction="always" />
</menu>