<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F2F2F2"
        tools:context=".activity.customer.forgot_password.new_password.NewPasswordActivity">
        <TextView
            android:id="@+id/don_t_worry"
            android:layout_width="230dp"
            android:layout_height="134dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="72dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="0sp"
            android:text="@string/don_t_worry"
            android:textAppearance="@style/don_t_worry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="227dp"
            android:layout_height="209dp"
            android:contentDescription="@string/image"
            android:src="@drawable/resetlink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/don_t_worry" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:importantForAutofill="no"
            android:inputType="textWebEmailAddress" />

        <EditText
            android:id="@+id/et_email2"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:hint="@string/confirmpassword"
            android:importantForAutofill="no"
            android:inputType="textWebEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <Button
            android:layout_width="270dp"
            android:layout_height="70dp"
            android:text="@string/resend_pass"
            android:id="@+id/reset_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email2"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>