<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            app:helperTextTextColor="@color/primary"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <EditText
                android:id="@+id/et_email_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:hint="Enter your email adress"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="18dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/ln_cek_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/primary"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_cekEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_radius"
                android:onClick="onClick"
                android:padding="10dp"
                android:text= "Next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="#80450A" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
=======
            android:background="@color/background">

            <TextView
                android:id="@+id/don_t_worry"
                android:layout_width="230dp"
                android:layout_height="134dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="72dp"
                android:gravity="center_horizontal|top"
                android:lineSpacingExtra="0sp"
                android:text="@string/don_t_worry"
                android:textAppearance="@style/don_t_worry"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/enter_your_"
                android:layout_width="242dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal|top"
                android:lineSpacingExtra="0sp"
                android:text="@string/enter_your_"
                android:textAppearance="@style/enter_your_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/don_t_worry" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="227dp"
                android:layout_height="209dp"
                android:contentDescription="@string/image"
                android:src="@drawable/resetlink"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_your_" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                app:helperTextTextColor="@color/primary"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <EditText
                    android:id="@+id/inputemails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:hint="Enter your email address"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/primary"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_email" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cekEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/button_radius"
                android:fontFamily="@font/poppins_bold"
                android:onClick="onClick"
                android:text="@string/resend_link"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_email"
                app:layout_constraintVertical_bias="0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

>>>>>>> 298d00a06fabd45d73d76f12f2c047857fd991d0
</layout>